--- a/Index.html
+++ b/Index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="javascript/jquery-3.2.1.js"></script>
-    <script src="javascript/scripts.js"></script>
-    <title>HTML help</title>
-  </head>
-  <body>
-    <div class="container">
-      <h1>HTML help</h1>
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="javascript/jquery-3.2.1.js"></script>
+  <script src="javascript/scripts.js"></script>
+  <title>Peek-A-Boo</title>
+</head>
+<body>
+  <div class="container">
+    <div class="peekaboo">
+      <h1>Peek-A-Boo</h1>
 
-      <p>This is a very special page. If you click somewhere, it will tell you what type of HTML element you clicked on.</p>
-
-      <p>Look at this cute walrus! Click here.</p>
-      <img src="img/walrus.jpg">
+      <div class="walrus-hidden">
+        <p><span class="clickable">Click here</span> to see a cute walrus!</p>
+      </div>
+      <div class="walrus-showing">
+        <p>Isn't it cute? <span class="clickable">Click here</span> to make it disappear.</p>
+        <img src="img/walrus.jpg">
+      </div>
     </div>
+    <div class ="slide">
+      <p>Want to see a pair of walruses? <span class="clickable">Click here</span> to see!</p>
+      <div class="slide-walrus">
+        <img src="img/walrus2.jpg">
+      </div>
+    </div>
+  </div>
 
-
-  </body>
+</body>
 </html>
