--- a/Index.html
+++ b/Index.html
@@ -9,9 +9,14 @@
 </head>
 <body>
   <div class="container">
+    <h1>Peek-A-Boo</h1>
+    <div class="text-white">
+      <p><strong><span class="clickable">Click here</span> for a night view</strong></p>
+    </div>
+    <div class="text-black">
+      <p><strong><span class="clickable">Click here</span> for the day view</strong></p>
+    </div>
     <div class="peekaboo">
-      <h1>Peek-A-Boo</h1>
-
       <div class="walrus-hidden">
         <p><span class="clickable">Click here</span> to see a cute walrus!</p>
       </div>
